--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,9 @@
 global.param.a=12
 global.param.b=32
+spring.h2.console.enabled=true
+spring.cloud.config.enabled=true
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
+spring.config.import=optional:configserver:http://localhost:9999
+#to includ all fonction of actuator : refresh beans, health, metrics ... to check all endpoint /actuator/
+management.endpoints.web.exposure.include=*
