--- a/application.properties
+++ b/application.properties
@@ -4,6 +4,6 @@ spring.h2.console.enabled=true
 spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 #to includ all fonction of actuator : refresh beans, health, metrics ... to check all endpoint /actuator/
 management.endpoints.web.exposure.include=*
